--- a/docker/application.yml.template
+++ b/docker/application.yml.template
@@ -31,6 +31,7 @@ server:
 
 ---
 grails:
+    serverURL: ${public_url}/mathplacement
     mime:
         disable:
             accept:
@@ -102,40 +103,16 @@ dataSource:
     username: sa
     password: ''
 
-canvas:
-    oauthToken: '${CANVAS_API_TOKEN}'
-    canvasBaseUrl: 'https://yale.beta.instructure.com'
-    ltiSecret: '${MATH_PLACEMENT_SECRET}'
-    manageCalendarRoles: 5,6,9,12,25,30
-
 environments:
-    development:
-        dataSource:
-            dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-    test:
-        dataSource:
-            dbCreate: update
-            url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     production:
-        dataSource:
-            dbCreate: none
-            url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-            properties:
-                jmxEnabled: true
-                initialSize: 5
-                maxActive: 50
-                minIdle: 5
-                maxIdle: 25
-                maxWait: 10000
-                maxAge: 600000
-                timeBetweenEvictionRunsMillis: 5000
-                minEvictableIdleTimeMillis: 60000
-                validationQuery: SELECT 1
-                validationQueryTimeout: 3
-                validationInterval: 15000
-                testOnBorrow: true
-                testWhileIdle: true
-                testOnReturn: false
-                jdbcInterceptors: ConnectionState
-                defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+        publicURL: ${public_url}
+        canvas:
+            oauthToken: ${canvas_api_key}
+            canvasBaseUrl: ${canvas_url}
+            ltiSecret: ${lti_secret}
+        dataSources:
+            dataSource:
+                dbCreate: update
+                username: ${db_username}
+                password: ${db_password}
+                url: ${db_url}
