--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile "org.grails.plugins:views-json"
     compile "org.grails.plugins:views-json-templates"
     compile "org.imsglobal:basiclti-util:1.1.2"
+    compile 'org.grails:grails-datastore-rest-client'
     console "org.grails:grails-console"
     profile "org.grails.profiles:react-webpack"
     runtime "org.glassfish.web:el-impl:2.1.2-b03"
