--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -161,7 +161,7 @@ canvas:
     oauthToken: '${CANVAS_API_TOKEN}'
     canvasBaseUrl: 'https://yale.beta.instructure.com'
     ltiSecret: '${MATH_PLACEMENT_SECRET}'
-    manageCalendarRoles: 5,6,9,12,25,30
+    perPageLimit: 100
 
 environments:
     development:
