more quiz apis, initial instructor view components

--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@instructure/ui-a11y": "^5.2.0",
+    "@instructure/ui-buttons": "^5.2.0",
+    "@instructure/ui-container": "^5.2.0",
+    "@instructure/ui-elements": "^5.2.0",
+    "@instructure/ui-forms": "^5.2.0",
+    "@instructure/ui-icons": "^5.2.0",
+    "@instructure/ui-layout": "^5.2.0",
+    "@instructure/ui-overlays": "^5.2.0",
+    "@instructure/ui-themeable": "^5.2.0",
+    "@instructure/ui-themes": "^5.2.0",
     "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
@@ -22,6 +32,7 @@
     "css-loader": "0.28.7",
     "file-loader": "0.11.1",
     "jsdom": "10.1.0",
+    "json-logic-js": "^1.2.2",
     "mocha": "3.3.0",
     "mocha-image-compiler": "1.0.0",
     "prop-types": "15.6.0",
