Render Quiz List
- Upgrade @instructure packages to 5.3.0
- Loading spinner
- NavigationBar component
- Rubric domain class

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -159,7 +159,7 @@ dataSources:
 
 canvas:
     oauthToken: '${CANVAS_API_TOKEN}'
-    canvasBaseUrl: 'https://yale.beta.instructure.com'
+    canvasBaseUrl: 'https://yale.test.instructure.com'
     ltiSecret: '${MATH_PLACEMENT_SECRET}'
     perPageLimit: 100
 
