--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "json-logic-js": "1.2.2",
     "prop-types": "15.6.1",
     "react": "16.3.2",
+    "react-csv": "^1.0.14",
     "react-dom": "16.3.2",
     "react-router-dom": "4.2.2",
     "react-test-renderer": "16.3.2"
