--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "immutability-helper": "^2.7.0",
     "jsdom": "11.10.0",
     "json-logic-js": "1.2.2",
+    "lodash": "^4.17.10",
     "prop-types": "15.6.1",
     "react": "16.3.2",
     "react-csv": "^1.0.14",
+    "react-dnd": "^2.6.0",
+    "react-dnd-html5-backend": "^2.6.0",
     "react-dom": "16.3.2",
     "react-router-dom": "4.2.2",
     "react-test-renderer": "16.3.2"
