--- a/build.gradle
+++ b/build.gradle
@@ -57,10 +57,10 @@ dependencies {
     compile "org.grails.plugins:views-json-templates"
     compile "org.imsglobal:basiclti-util:1.1.2"
     compile 'org.grails:grails-datastore-rest-client'
+    compile 'com.zaxxer:HikariCP:2.7.8'
     console "org.grails:grails-console"
     profile "org.grails.profiles:react-webpack"
     runtime "org.glassfish.web:el-impl:2.1.2-b03"
-    runtime "org.apache.tomcat:tomcat-jdbc"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.14.8"
     runtime "mysql:mysql-connector-java:5.1.46"
     testCompile "org.grails:grails-gorm-testing-support"
