--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dnd-html5-backend": "^2.6.0",
     "react-dom": "16.3.2",
     "react-router-dom": "4.2.2",
-    "react-test-renderer": "16.3.2"
+    "react-test-renderer": "16.3.2",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "babel-core": "6.26.3",
