--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@instructure/ui-a11y": "5.22.0",
-    "@instructure/ui-alerts": "5.22.0",
-    "@instructure/ui-breadcrumb": "5.22.0",
-    "@instructure/ui-buttons": "5.22.0",
-    "@instructure/ui-elements": "5.22.0",
-    "@instructure/ui-forms": "5.22.0",
-    "@instructure/ui-icons": "5.22.0",
-    "@instructure/ui-layout": "5.22.0",
-    "@instructure/ui-overlays": "5.22.0",
-    "@instructure/ui-themeable": "5.22.0",
-    "@instructure/ui-themes": "5.22.0",
+    "@instructure/ui-a11y": "^5.22.0",
+    "@instructure/ui-alerts": "^5.22.0",
+    "@instructure/ui-breadcrumb": "^5.22.0",
+    "@instructure/ui-buttons": "^5.22.0",
+    "@instructure/ui-elements": "^5.22.0",
+    "@instructure/ui-forms": "^5.22.0",
+    "@instructure/ui-icons": "^5.22.0",
+    "@instructure/ui-layout": "^5.22.0",
+    "@instructure/ui-overlays": "^5.22.0",
+    "@instructure/ui-themeable": "^5.22.0",
+    "@instructure/ui-themes": "^5.22.0",
     "axios": "0.18.0",
     "immutability-helper": "^2.7.0",
     "jsdom": "11.10.0",
     "json-logic-js": "1.2.2",
     "lodash": "^4.17.10",
     "prop-types": "15.6.2",
-    "react": "16.4.1",
+    "react": "16.3.2",
     "react-csv": "^1.0.14",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
-    "react-dom": "16.4.1",
+    "react-dom": "16.3.3",
     "react-router-dom": "4.2.2",
-    "react-test-renderer": "16.4.1",
+    "react-test-renderer": "16.3.2",
     "uniqid": "^5.0.3"
   },
   "devDependencies": {
