UI Upgrade, Performance Fixes

--- a/docker/application.yml.template
+++ b/docker/application.yml.template
@@ -111,6 +111,7 @@ environments:
             canvasBaseUrl: ${canvas_url}
             ltiSecret: ${lti_secret}
             perPageLimit: ${per_page_limit}
+            placementCourseId: ${placement_course_id}
         dataSources:
             dataSource:
                 dbCreate: update
