--- a/package.json
+++ b/package.json
@@ -11,22 +11,27 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@instructure/ui-a11y": "^5.22.0",
-    "@instructure/ui-alerts": "^5.22.0",
-    "@instructure/ui-breadcrumb": "^5.22.0",
-    "@instructure/ui-buttons": "^5.22.0",
-    "@instructure/ui-elements": "^5.22.0",
-    "@instructure/ui-forms": "^5.22.0",
-    "@instructure/ui-icons": "^5.22.0",
-    "@instructure/ui-layout": "^5.22.0",
-    "@instructure/ui-overlays": "^5.22.0",
-    "@instructure/ui-themeable": "^5.22.0",
-    "@instructure/ui-themes": "^5.22.0",
+    "@instructure/ui-a11y": "^6.2.0",
+    "@instructure/ui-alerts": "^6.2.0",
+    "@instructure/ui-breadcrumb": "^6.2.0",
+    "@instructure/ui-buttons": "^6.2.0",
+    "@instructure/ui-elements": "^6.2.0",
+    "@instructure/ui-forms": "^6.2.0",
+    "@instructure/ui-icons": "^6.2.0",
+    "@instructure/ui-layout": "^6.2.0",
+    "@instructure/ui-number-input": "^6.2.0",
+    "@instructure/ui-overlays": "^6.2.0",
+    "@instructure/ui-pagination": "^6.2.0",
+    "@instructure/ui-table": "^6.2.0",
+    "@instructure/ui-text-input": "^6.2.0",
+    "@instructure/ui-themeable": "^6.2.0",
+    "@instructure/ui-themes": "^6.2.0",
     "axios": "0.18.0",
     "immutability-helper": "^2.7.0",
     "jsdom": "11.10.0",
     "json-logic-js": "1.2.2",
     "lodash": "^4.17.10",
+    "moment": "^2.24.0",
     "prop-types": "15.6.2",
     "react": "16.3.2",
     "react-csv": "^1.0.14",
